@@ -82,12 +82,13 @@ import itertools
 import warnings
 
 from . import base
+from ..coordinates.base import SingleFrameReaderBase
 from ..topology.tables import SYMB2Z
 from ..core.universe import Universe
 from ..exceptions import NoDataError
 
 
-class ParmEdReader(base.SingleFrameReaderBase):
+class ParmEdReader(SingleFrameReaderBase):
     """Coordinate reader for ParmEd."""
     format = 'PARMED'
 
